[FIX] website_sale: fix contact widget on safari
Contact widget was causing a schema.org error on safari for mobile versions
in checkout and in payment confirmation, which caused customers to be weary
of paying on odoo.
Removed the use of contact widget and displayed the address instead

opw-4062917

closes odoo/odoo#175524

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -772,7 +772,7 @@ a.no-decoration {
         line-height: $headings-line-height;
     }
 
-    div[itemprop="address"] {
+    div[itemprop="address"],  .o_address_font_sm {
         margin: map-get($spacers, 2) 0;
         font-size: $font-size-sm;
     }
